--- a/index.html
+++ b/index.html
@@ -339,12 +339,29 @@
             <div class="contact-item"><svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2C8.14 2 5 5.14 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.86-3.14-7-7-7z"/></svg>
               <address style="font-style:normal">Via Dante, 15 – 20121 Milano (MI)</address></div>
           </div>
-          <div class="socials" aria-label="Social media">
-            <a href="#" aria-label="Facebook" rel="noopener" target="_blank">f</a>
-            <a href="#" aria-label="Instagram" rel="noopener" target="_blank">ig</a>
-            <a href="#" aria-label="LinkedIn" rel="noopener" target="_blank">in</a>
-            <a href="https://wa.me/393331234567" aria-label="WhatsApp" rel="noopener" target="_blank">wa</a>
-          </div>
+<div class="socials" aria-label="Social media">
+  <a href="#" aria-label="Facebook" rel="noopener" target="_blank">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="white">
+      <path d="M22 12a10 10 0 1 0-11.5 9.9v-7h-2v-3h2v-2c0-2 1.2-3 3-3 .9 0 1.8.1 1.8.1v2h-1c-1 0-1.3.6-1.3 1.2v1.7h2.3l-.4 3h-1.9v7A10 10 0 0 0 22 12" />
+    </svg>
+  </a>
+  <a href="#" aria-label="Instagram" rel="noopener" target="_blank">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="white">
+      <path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zm-5 3a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 2a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm4.8-2.9a1.1 1.1 0 1 0 0 2.2 1.1 1.1 0 0 0 0-2.2z"/>
+    </svg>
+  </a>
+  <a href="#" aria-label="LinkedIn" rel="noopener" target="_blank">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="white">
+      <path d="M4.98 3.5a2.5 2.5 0 1 1-.01 5.01 2.5 2.5 0 0 1 .01-5.01zM3 9h4v12H3zM9 9h3.6v1.7h.1c.5-.9 1.7-1.8 3.4-1.8 3.6 0 4.3 2.3 4.3 5.3V21h-4v-5.3c0-1.3 0-3-1.8-3s-2.2 1.4-2.2 2.9V21H9z"/>
+    </svg>
+  </a>
+  <a href="https://wa.me/393331234567" aria-label="WhatsApp" rel="noopener" target="_blank">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="white">
+      <path d="M20 4A10 10 0 0 0 4 20l-1 4 4-1a10 10 0 0 0 13-13zm-8 15c-1.6 0-3.2-.5-4.6-1.5l-.3-.2-2.7.7.7-2.7-.2-.3A7.9 7.9 0 1 1 12 19zm4.3-5.8c-.2-.1-1.3-.7-1.5-.8s-.4-.1-.6.1c-.2.2-.7.8-.8.9-.1.2-.3.2-.5.1-.2-.1-.9-.3-1.7-1s-1.2-1.5-1.3-1.7c-.1-.2 0-.4.1-.5s.2-.3.3-.4c.1-.1.2-.2.3-.4.1-.2 0-.3 0-.4s-.6-1.5-.8-2.1c-.2-.5-.4-.4-.6-.4h-.5c-.2 0-.4.1-.5.2-.2.2-.7.6-.7 1.5s.7 1.8.8 2c.1.2 1.5 2.3 3.6 3.3.5.2.9.3 1.2.4.5.2.9.2 1.2.1.4-.1 1.3-.5 1.5-1s.2-.9.1-1-.2-.2-.4-.3z"/>
+    </svg>
+  </a>
+</div>
+
         </section>
 
         <section class="ft-block col-2" aria-labelledby="ft-legale">
