--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@
       </div>
       <p class="extra-deal">+ iPhone 15 a €19/mese invece di €29</p>
       <div class="cta-wrapper">
-        <a href="https://wa.me/393331234567?text=Ciao!%20Sono%20interessato%20all'offerta%20Fibra%202.5Gb%20%2B%20Mobile%20a%20€39.90" class="cta-primary" aria-label="Scrivici su WhatsApp per l'offerta">
+        <a href="https://wa.me/393331234567" class="whatsapp-btn" target="_blank" aria-label="Chatta su WhatsApp">
+  <i class="fab fa-whatsapp"></i>
+</a>
+
           <!-- icona whatsapp -->
           <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.149-.67.149-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414-.074-.123-.272-.198-.57-.347"/></svg>
           WhatsApp: 333 123 4567
