--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <!-- JSON-LD -->
   <script type="application/ld+json" src="assets/schema/organization.json"></script>
   <script type="application/ld+json" src="assets/schema/localbusiness-duomo.json"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <a href="#offerte" class="skip-link">Salta ai contenuti</a>
